# credit-agent

./: .env.example  ARCHITECTURE.md  CLAUDE.md  README.md  chat.html  docker-compose.yml  plano.md  pyproject.toml  requirements.txt
app/: main.py  settings.py
app/agent/: graph.py  prompts.py  state.py
app/agent/nodes/: authentication.py  close_deal.py  farewell.py  fetch_customer.py  fetch_offers.py  greeting.py  negotiation.py
app/agent/tools/: db_tools.py  offer_tools.py
app/api/: chat.py
app/db/: connection.py  models.py
data/: offers.json  seed.sql
scripts/: init_db.py
